Refactor the backend into several modules